// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`.not.toBeInteger fails when given integer 1`] = `
"<dim>expect(</intensity><red>received</color><dim>).not.toBeBigInt()</intensity>

Expected value to not be an BigInt received:
  <red>1n</color>"
`;

exports[`.toBeBigInt fails when given fraction 1`] = `
"<dim>expect(</intensity><red>received</color><dim>).toBeBigInt()</intensity>

Expected value to be a BigInt received:
  <red>1.5</color>"
`;

exports[`.toBeBigInt fails when given integer 1`] = `
"<dim>expect(</intensity><red>received</color><dim>).toBeBigInt()</intensity>

Expected value to be a BigInt received:
  <red>1</color>"
`;
